carina-cli/src/snapshots/carina__plan_snapshot_tests__snapshot_moved_prev_keys.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.ec2.subnet 
      cidr_block: "10.0.1.0/24"
      vpc_id: new_vpc.vpc_id
        │
        └─ ~ awscc.ec2.vpc new_vpc (moved from: awscc.ec2.vpc.old_vpc)
              tags: [{key: "Name", value: "old"}] → (removed)
              # (1 unchanged attribute hidden)

Plan: 1 to add, 1 to change, 0 to destroy, 1 to move.
