carina-cli/src/snapshots/carina__plan_snapshot_tests__snapshot_secret_values.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  - awscc.ec2.subnet orphan_subnet
      cidr_block: "10.0.1.0/24"
      subnet_id: "subnet-0123456789abcdef0"
      tags:
        ApiKey: (secret)
        Name: "orphan-subnet"
      vpc_id: "vpc-0123456789abcdef0"
  ~ awscc.ec2.vpc ec2_vpc_fb75c929
      tags:
        ~ Password: (secret) → (secret)
      # (1 unchanged attribute hidden)

Plan: 0 to add, 1 to change, 1 to destroy.
